<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblnbDices"
        android:layout_width="136dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:text="@string/nbr_of_dices"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_inc"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_inc"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="56dp"
        android:layout_height="38dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="60dp"
        android:text="@string/textView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/lblnbDices"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_dec"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:text="@string/btn_dec"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="398dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="404dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingClass">


        <Button
            android:id="@+id/btnRollAllClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="28dp"
            android:text="@string/roll_all_dices"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnRollOneClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="28dp"
            android:text="@string/roll_one_dice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/Img1"
            android:layout_width="96dp"
            android:layout_height="82dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dice" />

        <ImageView
            android:id="@+id/Img3"
            android:layout_width="93dp"
            android:layout_height="81dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="112dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dice" />

        <ImageView
            android:id="@+id/Img2"
            android:layout_width="99dp"
            android:layout_height="83dp"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/dice" />

        <ImageView
            android:id="@+id/Img4"
            android:layout_width="96dp"
            android:layout_height="88dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="112dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/dice" />

        <TextView
            android:id="@+id/diceTv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="69dp"
            android:text="-"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Img1" />

        <TextView
            android:id="@+id/diceTv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="80dp"
            android:text="-"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/diceTv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="76dp"
            android:text="-"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/diceTv1"
            android:layout_width="4dp"
            android:layout_height="18dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:text="-"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/roll_all_dices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ResultsView"
        android:layout_width="410dp"
        android:layout_height="308dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>